<resources>
    <string name="app_name">Takiken</string>

    <string name="title_home">HOME</string>
    <string name="title_problem_answer">問題解答</string>
    <string name="title_making_problem">問題作成</string>
    <string name="title_map">たきざわMAP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--<string name="action_example">Example action</string>-->
    <!--<string name="action_settings">Settings</string>-->

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_activity_problem_answer">ProblemAnswerActivity</string>
    <string name="btn1">btn1</string>
    <string name="btn2">btn2</string>

    <!-- ボタン -->
    <string name="btn">決定</string>
    <string name="new_user_btn">新規登録</string>
    <string name="start_btn">スタート</string>

    <!-- 問題 -->
    <string name="question_txt">問題文を入力して下さい。</string>
    <string name="answer_txt">解答を入力して下さい。</string>
    <string name="nextBtn">次へ</string>
    <string name="endBtn">終了</string>
    <string name="incorrect1_txt">1つめの不正解を入力して下さい。</string>
    <string name="incorrect2_txt">2つめの不正解を入力して下さい。</string>
    <string name="incorrect3_txt">3つめの不正解を入力して下さい。</string>
    <string name="incorrect4_txt">4つめの不正解を入力して下さい。</string>

    <!-- ログイン -->
    <string name="title_activity_login">ログイン</string>
    <string name="login_user">ユーザ名</string>
    <string name="login_pass">パスワード</string>

    <string name="logout">ログアウト</string>
    <string name="action_settings">Settings</string>

    <!-- ユーザ登録 -->
    <string name="title_activity_user_add">ユーザ登録</string>
    <string name="username_txt">ユーザ名</string>
    <string name="email_txt">メールアドレス</string>
    <string name="password_txt">パスワード</string>

    <!-- 説明 -->
    <string name="spot_quiz_start_txt">このスポットの問題を解けます！</string>

</resources>
