<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.macuser.takiken.MultipleChoiceFragment"
    android:background="@drawable/blackboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <Spinner
                android:layout_width="285dp"
                android:layout_height="120dp"
                android:id="@+id/mc_category"
                android:layout_gravity="center_horizontal"
                android:background="@color/wallet_holo_blue_light"
                android:spinnerMode="dialog"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp" />

            <EditText
                android:layout_width="285dp"
                android:layout_height="314dp"
                android:id="@+id/mc_question"
                android:layout_gravity="center_horizontal|top"
                android:hint="@string/question_txt"
                android:inputType="text|textMultiLine"
                android:background="@color/abc_search_url_text_normal"
                android:layout_marginBottom="20dp" />

            <EditText
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:id="@+id/mc_answer"
                android:hint="@string/answer_txt"
                android:inputType="text|textMultiLine"
                android:background="@color/button_material_light"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp" />

            <EditText
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:id="@+id/mc_incorrect1"
                android:hint="@string/incorrect1_txt"
                android:inputType="text|textMultiLine"
                android:background="@color/button_material_light"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp" />

            <EditText
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:id="@+id/mc_incorrect2"
                android:hint="@string/incorrect2_txt"
                android:inputType="text|textMultiLine"
                android:background="@color/button_material_light"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp" />

            <EditText
                android:layout_width="285dp"
                android:layout_height="50dp"
                android:id="@+id/mc_incorrect3"
                android:hint="@string/incorrect3_txt"
                android:inputType="text|textMultiLine"
                android:background="@color/button_material_light"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn"
                android:id="@+id/mc_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="34dp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
