<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.macuser.takiken.UserAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:layout_width="285dp"
            android:layout_height="90dp"
            android:id="@+id/add_username"
            android:layout_gravity="center_horizontal|top"
            android:hint="@string/username_txt"
            android:inputType="text"
            android:background="@color/abc_search_url_text_normal"
            android:layout_marginBottom="20dp" />

        <EditText
            android:layout_width="285dp"
            android:layout_height="90dp"
            android:id="@+id/add_email"
            android:hint="@string/email_txt"
            android:inputType="text|textEmailAddress"
            android:background="@color/button_material_light"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <EditText
            android:layout_width="285dp"
            android:layout_height="90dp"
            android:id="@+id/add_password"
            android:hint="@string/password_txt"
            android:inputType="textPassword"
            android:background="@color/button_material_light"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn"
            android:id="@+id/user_add_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="34dp" />

    </LinearLayout>

</LinearLayout>
