<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.macuser.takiken.MakingQandAFragment"
    android:background="@drawable/blackboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">

            <Spinner
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:id="@+id/qaa_category"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bunbougu_fusen"
                android:spinnerMode="dialog"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:paddingTop="30dp"
                android:paddingLeft="70dp" />

            <EditText
                android:layout_width="340dp"
                android:layout_height="320dp"
                android:id="@+id/qaa_question"
                android:layout_gravity="center_horizontal|top"
                android:hint="@string/question_txt"
                android:inputType="text|textMultiLine"
                android:background="@drawable/book"
                android:layout_marginBottom="10dp"
                android:padding="40dp" />

            <EditText
                android:layout_width="340dp"
                android:layout_height="320dp"
                android:id="@+id/qaa_answer"
                android:hint="@string/answer_txt"
                android:inputType="text|textMultiLine"
                android:background="@drawable/book"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:padding="40dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn"
                android:id="@+id/qaa_button"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="34dp"
                android:background="@drawable/btn08" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
